--- a/example_config.json
+++ b/example_config.json
@@ -1,4 +1,22 @@
 {
     "token": "your.token.here",
-    "log_file": "bot.log"
+    "log_file": "bot.log",
+    "client_id": 1107462705004167230,
+    "github": "https://github.com/ntvmb/cyclomonitor",
+    "emojis": {
+        "ex": "<:ex:1109994645431259187>",
+        "low": "<:low:1109997033227558923>",
+        "remnants": "<:remnants:1109994646932836386>",
+        "td": "<:td:1109994651169079297>",
+        "sd": "<:sd:1109994648300163142>",
+        "ts": "<:ts:1109994652368650310>",
+        "ss": "<:ss:1109994649654935563>",
+        "cat1": "<:cat1:1109994357257420902>",
+        "cat2": "<:cat2:1109994593895862364>",
+        "cat3": "<:cat3:1109994641094357024>",
+        "cat4": "<:cat4:1109994643057295401>",
+        "cat5": "<:cat5:1109994644386893864>",
+        "cat5intense": "<:cat5intense:1111376977664954470>",
+        "cat5veryintense": "<:cat5veryintense:1111378049448026126>"
+    }
 }
