--- a/example_config.json
+++ b/example_config.json
@@ -18,5 +18,6 @@
         "cat5": "<:cat5:1109994644386893864>",
         "cat5intense": "<:cat5intense:1111376977664954470>",
         "cat5veryintense": "<:cat5veryintense:1111378049448026126>"
-    }
+    },
+    "server": "https://discord.gg/xBHESnJYz5"
 }
