--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,3 +52,4 @@ single-instance = ["tendo"]
 Repository = "https://github.com/ntvmb/cyclomonitor.git"
 Issues = "https://github.com/ntvmb/cyclomonitor/issues"
 Changelog = "https://github.com/ntvmb/cyclomonitor/blob/master/CHANGELOG.md"
+Discord = "https://discord.gg/xBHESnJYz5"
