--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ maintainers = [
   {name = "Nathaniel Greenwell", email = "nategreenwell@live.com"}
 ]
 dependencies = [
-  "py-cord>=2.5.0",
+  "aiohttp>=3.6.0",
 ]
 requires-python = ">=3.8"
 classifiers = [
@@ -46,7 +46,10 @@ classifiers = [
 ]
 
 [project.optional-dependencies]
-single-instance = ["tendo"]
+bot = [
+  "py-cord>=2.5.0",
+  "tendo",
+]
 
 [project.urls]
 Repository = "https://github.com/ntvmb/cyclomonitor.git"
