Fix the yikes command

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ src/cyclomonitor/ibtracs/locales/__pycache__/
 src/cyclomonitor/ibtracs/BestTrack.db
 src/bot.log
 src/cyclomonitor.egg-info
+src/cyclomonitor/locales/es_US.json
