--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,12 +43,14 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Programming Language :: Python :: 3 :: Only",
 ]
 
 [project.optional-dependencies]
 bot = [
-  "py-cord>=2.5.0",
+  "py-cord>=2.6.1",
+  "audioop-lts; python_version>='3.13'",
   "tendo",
 ]
 
