More verbose security logs

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,6 @@ src/cyclomonitor/ibtracs/__pycache__/
 src/cyclomonitor/locales/__pycache__/
 src/cyclomonitor/ibtracs/locales/__pycache__/
 src/cyclomonitor/ibtracs/BestTrack.db
-src/bot.log
 src/cyclomonitor.egg-info
 src/cyclomonitor/locales/es_US.json
+**/*.log
